Fix sector spacing

--- a/components/base/utilities/layout.css
+++ b/components/base/utilities/layout.css
@@ -1,7 +1,6 @@
-/* @define utilities */
-
 @import "../global";
 
+/* @define utilities */
 .u-hidden {
   display: none !important;
 }
@@ -45,6 +44,37 @@
 .u-right { right: 0 !important; }
 .u-bottom { bottom: 0 !important; }
 .u-left { left: 0 !important; }
+
+/**
+ * Aspect ratio
+ */
+
+.u-aspect1-1,
+.u-aspect4-3,
+.u-aspect16-9 {
+  position: relative !important;
+}
+
+.u-aspect1-1::before,
+.u-aspect4-3::before,
+.u-aspect16-9::before {
+  content: "" !important;
+  display: block !important;
+  height: 0 !important;
+}
+
+.u-aspect1-1::before { padding-top: 100% !important; }
+.u-aspect4-3::before { padding-top: calc(100% * 3 / 4) !important; }
+.u-aspect16-9::before { padding-top: calc(100% * 9 / 16) !important; }
+
+.u-cover {
+  object-fit: cover !important;
+  width: 100% !important;
+  height: 100% !important;
+  position: absolute !important;
+  left: 0 !important;
+  top: 0 !important;
+}
 
 /**
  * Centered page container
