--- a/components/view/index.css
+++ b/components/view/index.css
@@ -9,14 +9,14 @@
   background: rgb(var(--default-background-color));
 }
 
+/**
+ * Header
+ */
+
 .View-header {
   position: relative;
   z-index: 2;
 }
-
-/**
- * Fade in
- */
 
 .View-header--appear {
   opacity: 0;
@@ -84,10 +84,61 @@
   }
 }
 
+/**
+ * Main content area
+ */
+
 .View-main {
   flex-grow: 1;
 }
 
+/**
+ * Footer
+ */
+
 .View-footer {
   margin-top: 10rem;
+}
+
+/**
+ * Sections
+ */
+
+.View-section {
+  margin-bottom: 7rem;
+}
+
+/**
+ * Visually group section heading with next sibling section
+ */
+
+.View-section--heading {
+  margin-bottom: 3.5rem;
+}
+
+.View-section--heading::before {
+  content: "";
+  height: 10vh;
+  display: block;
+  max-height: 60px;
+}
+
+/**
+ * 1. Deduct margin to augument Grid spacing
+ */
+
+.View-section--image + .View-section--video,
+.View-section--image + .View-section--gallery,
+.View-section--video + .View-section--image,
+.View-section--video + .View-section--gallery {
+  margin-top: calc((7rem - var(--Grid-gutter)) * -1); /* 1 */
+}
+
+/**
+ * 1. Rely on gutter cell bottom to apply appropiate spacing
+ */
+
+.View-section--gallery + .View-section--image,
+.View-section--gallery + .View-section--video {
+  margin-top: -7rem; /* 1 */
 }
